# ihs-deo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  _.env  docker-compose.yml  dump.rdb  ec2.tf  example.json  main.py  no  producing_entity.xml  pyproject.toml  sample.xml  sample_prod.xml  temp.xml  well_header.xml  well_header_example.xml  wellbore.json
.circleci/: config.yaml  config.yml
.old/: Pipfile  app-config-driftwooddigest.xml  changes_and_deletes.xml  data.json  testoutput.json
.old/app/: __init__.py  changes_and_deletes.py  collector.py  connection.py  mongo.py  production_monthly.py  settings.py  util.py  version.py
.old/app/queries/: well_upton_all.xml
.old/app/reference/: brock.py  mongo-test.py  parse_production_header.py  query_testing.py  test.py
.old/mappings/production/: header_map.yaml  location_map.yaml  metadata_map.yaml  producing_entity_map.yaml
.old/mappings/well/: PB_WELL_TEST_map.yaml  content_map.yaml  engineering_map.yaml  metadata_map.yaml  treatment_summary_map.yaml
.old/src/: conductor.py  hack.py  log.py  settings.py  soap.py  version.py
app/: __xml2.py  brock.py  changes_and_deletes.py  collector.py  config.py  connection.py  loggers.py  manage.py  mineisbetterthanbrocks.py  mongo.py  parse_production_header.py  parse_well_header.py  parsexml.py  production_header_xml_to_df.py  production_monthly.py  production_test.py  settings.py  spatial.py  test.py  util.py  wells.py
app/api/: model_mixins.py  models.py
app/celery_queue/: worker.py
app/collector/: collector.py  endpoint.py  requestor.py  tasks.py
app/reference/: __parse_with_sqlalchemy.py  mineisbetterthanbrocks.py  parse_production_header.py  parse_well_header.py  spatial.py  tables.py  test.py
config/: boundingbox.txt  collector.yaml  logging.yaml  parsers.yaml  wellbore_mappings.yaml
config/queries/: well_midland_all.xml  well_reagan_all.xml  well_upton_all.xml
config/queries/.old/: custom-Well_Headers.xml  production-driftwood-datefilter.xml
config/templates/: production.xml  well.xml
config/templates/queries/: criteria_hole_direction.xml  criteria_operator.xml  production_by_api.xml  production_by_entity.xml  production_horizontal_by_county.xml  production_horizontal_driftwood_all.xml  production_vertical_by_county.xml  production_vertical_driftwood_all.xml  well_by_api.xml  well_by_county.xml  well_driftwood_all.xml  well_horizontal_by_county.xml  well_horizontal_driftwood_all.xml  well_vertical_driftwood_all.xml
config/wsdl/v10/: Session.xsd
data/: counties.json
doc/: IHS API Docs.url  change_and_delete_reason_codes.csv  well-test-fields.txt
doc/DirectConnect/Energy_WS_SDK-2018v9-WSDL/: DataTemplateManager.wsdl  DataTemplateManager.xsd  ExportBuilder.wsdl  GraphBuilder.wsdl  GraphBuilder.xsd  QueryBuilder.xsd  ReportBuilder.wsdl  ReportBuilder.xsd  Session.wsdl  Session.xsd  Types.xsd
doc/direct-connect/: enerdeq-ml-well.xsd
doc/wsdl-text/: ExportBuilder.cs  QueryBuilder.cs
docs/: well-test-xsd.xsd
docs/DirectConnect/: Entitlements (1).xsd
docs/DirectConnect/Energy_WS_SDK-2018v10-WSDL/: ChangesAndDeletes.xsd  DataTemplateManager.wsdl  ExportBuilder.wsdl  QueryBuilder.xsd  ReportBuilder.xsd
docs/DirectConnect/Energy_WS_SDK-2018v9-WSDL/: ChangesAndDeletes.xsd  ExportBuilder.xsd  Header.xsd  QueryBuilder.wsdl
docs/DirectConnect/wsdl.v10/: DataTemplateManager.xsd  ExportBuilder.xsd  GraphBuilder.xsd  ReportBuilder.wsdl  Session.wsdl  Types.xsd
docs/wsdl-text/: ExportBuilder.cs  QueryBuilder.txt  Session.cs
ihs/: __init__.py  __version__.py  config.py  exc.py  ext.py  loggers.py  manage.py  mongo.py  wsgi.py
ihs/api/: apispec.py  ids.py  models.py  production.py  well.py  welldata.py
ihs/api/helpers/: __init__.py  pagination.py
ihs/api/mixin/: __init__.py  base_mixin.py  (+2 more)
ihs/celery_queue/: routers.py  tasks.py  worker.py
ihs/collector/: __init__.py  builder.py  collector.py  endpoint.py  export_parameter.py  identity_list.py  parser.py  request.py  requestor.py  soap_requestor.py  task.py  tasks.py  transformer.py  util.py  xml_query.py  xml_schema_builder.py  xmlparser.py  yammler.py
ihs/metrics/: __init__.py  metrics.py
ihs/util/: __init__.py  deco.py  geo.py  jsontools.py  stringprocessor.py
mappings/production/: wellbore_map.yaml
mappings/well/: drilling_map.yaml  geology_map.yaml  geophysics_map.yaml  header_map.yaml  location_map.yaml  mechanical_map.yaml  tests_map.yaml
queries/: Driftwood Production Header.qry  Driftwood Well Query.qry  Midland Basin Horizontals.qry  criteriaProduction.xml  criteriaWell.xml  production-driftwood.xml  well-driftwood.xml
scripts/: deploy.py  deploy.sh  make_secret_key.py  pip-install-geostack.ps1  release.py  run.ps1  seed_data.py
src/: conductor.py  digest.py  tables.py
templates/: production.xml
terraform/: .terraformignore  Makefile  cloudwatch.tf  ec2.tf  ecs.tf  main.tf  parameter-store.tf  route53.tf  service_discovery.tf  sqs.tf  variables.tf
terraform/.terraform/: terraform.tfstate
terraform/service_autoscaling/: main.tf
terraform/service_target_tracking/: main.tf
terraform/templates/: user_data.sh
terraform/terraform/: user_data.sh
test/: __init__.py  conftest.py  test_endpoint.py  test_task.py
test/data/: production_example.json  production_parsed.json  production_sequoia.json  production_unparsed.json  vertical_driftwood_all.json  wellbore_example.json
tests/: conftest.py  test_task.py
tests/collector/: test_endpoint.py
tests/data/: collector-deo.yaml  collector.yaml  duplicate_key_error_log.csv  existing_example.json  incomming_example.json  production_export.json  production_parsed.json  production_unparsed.json  test_driftwood.json  test_line.geojson  test_point.geojson  test_shl_from_northings_and_eastings.geojson  test_survey_from_northings_and_eastings.geojson  test_survey_points_from_northings_and_eastings.geojson  test_well.json  well_header_short.xml  wellbore_driftwood_all.json  wellbore_sequoia.json
(+80 files in other folders)
