[tool.poetry]
name = "ihs"
version = "1.0.10"
description = "Automation service for downloading oil and gas data from IHS Energy"
authors = ["Brock Friedrich <brock@driftwoodenergy.com>"]


[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "*"
pandas = "*"
sentry-sdk = "*"
oauthlib = "*"
click = "*"
flask = "*"
flask-debugtoolbar = "*"
Flask-RESTful = "*"
python-dotenv = "^0.10.3"
attrdict = "^2.0"
logutils = "^0.3.5"
pyparsing = "^2.4"
attrs = "^19.3"
datadog = "^0.31.0"
celery = {version = "^4.3.0", extras = ["sqs"]}
pymongo = "^3.9.0"
zeep = "*"
lxml = "^4.4.1"
mongoengine = "^0.18.2"
flask-mongoengine = "^0.9.5"
requests_oauthlib = "^1.3.0"
xmltodict = "^0.12.0"
marshmallow = "^3.2.2"
pyproj = "^2.4.1"
gunicorn = "^20.0.4"
JSON-log-formatter = "^0.2.0"
ddtrace = "^0.31.0"
setproctitle = "^1.1.10"
apispec = {version = "^3.2.0", extras = ["yaml"]}
apispec-webframeworks = "^0.5.2"
dnspython = "^1.16.0"
tomlkit = "^0.5.8"
shapely = "^1.7.0"


[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
mypy = "*"
pylint = "*"
ipython = "*"
matplotlib = "*"
pytest = "*"
pytest-cov = "*"
docker = "*"
boto3 = "*"
hypothesis = "*"
requests-mock = "*"
redis = "^3.3.11"
codecov = "^2.0.15"
coverage = {version = "^5.0", extras = ["toml"]}
six = "^1.14.0"
geopandas = "^0.6.2"

[tool.poetry.scripts]
ihs = "ihs.manage:main"

[tool.poetry.extras]
color = [ "colorama", ]
docs = [ "doc8", "docutils","Sphinx","sphinx_rtd_theme","sphinx-autodoc-typehints","sphinxcontrib-apidoc",]
pytest = [ "pytest", "pytest-html", "pytest-cov" ]
lint = [ "flake8", "flake8-bugbear", "mypy", "bandit", "pylint", ]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "logger.debug",
    "if 0:",
    "if __name__ == .__main__.:"
]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


